--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "18",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-toastify": "^10.0.6"
   },
